<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="false"
    android:background="@drawable/bg"
    tools:context="com.google.android.gms.samples.vision.ocrreader.PrefrencesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/enter_prefs"
        android:textColor="@color/parsapurple"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/diet_label"
        android:textColor="@color/parsapurple"
        android:textSize="30sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Apply"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginBottom="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/Egg_Allergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:gravity="left|center"
                android:text="@string/egg_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Gluten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:text="@string/gluten_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/Soy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:gravity="left|center"
                android:text="@string/soy_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Wheat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:gravity="left|center"
                android:text="@string/wheat_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/Peanut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:text="@string/peanut_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Lactose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:text="@string/lactose_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/Milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:gravity="left|center"
                android:text="@string/milk_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Vegetarian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:text="@string/vegetarian_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/Seafood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:gravity="left|center"
                android:text="@string/seafood_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Vegan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@android:color/black"
                android:fontFamily="sans-serif"
                android:text="@string/vegan_choice"
                android:textColor="@color/parsapurple"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/Apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rounded_btn"
        android:padding="10dp"
        android:text="Apply Preferences"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</RelativeLayout>
